--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-plugin-dts": "^3.7.3",
-    "vite-plugin-linter": "^2.1.1",
-    "vite-tsconfig-paths": "^4.3.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
