--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,31 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "declaration": true,
+    "composite": true,
     "skipLibCheck": true,
-     "esModuleInterop": true ,
-     "declarationMap": true,
-    "baseUrl": ".",
-     "paths": {
-      "react-vite-library": [ "src/component/index.ts" ]
-    },
-    "typeRoots": [
-      "node_modules/@types",
-      "src/component/index.d.ts"
-    ]
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["vite.config.ts"]
 }
