--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 name: Generate tag version
 on:
   workflow_dispatch:
@@ -20,14 +21,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: main
-      - name: Set up Node.js 16.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16.x'
-
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
 
       - name: Generate new version
         run: npm version ${{ github.event.inputs.version }}
