--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
-
-name: Generate tag version
+name: Generate tag version and push
 on:
+  push:
+    branches:
+      - main
+
   workflow_dispatch:
     inputs:
       version:
@@ -15,22 +18,60 @@ on:
 
 jobs:
   version:
-    name: Create new version ${{ github.event.inputs.version }}
+    name: Create new version 
+    
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
         with:
           ref: main
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 16.x
+          registry-url: https://registry.npmjs.org/
 
-      - name: Generate new version
+      - name: Install dependencies
+        run: yarn
+
+      - name: Generate new version on Dispatch
+        if: ${{ github.event.inputs.version }} != ''
         run: npm version ${{ github.event.inputs.version }}
+
+      - name: Generate new version on Push
+        if: github.event_name == 'push'
+        run: npm version patch
 
       - name: Push new version tag to repository
         run: git push origin main --tags
+  
+  build_and_push:
+    runs-on: ubuntu-latest
+    needs: version
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          ref: main
+      
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+          registry-url: https://registry.npmjs.org/
+      
+      - name: Install dependencies
+        run: yarn
+
+      - name: Build
+        run: yarn build
+        
+      - name: Publish
+        run: npm publish --access=public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
