--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
     "react-hooks": "^1.0.1",
+    "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
