--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,12 +34,15 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.x' # Actualiza la versión de Node.js a una compatible con Husky
+          node-version: '18.x'
           registry-url: https://registry.npmjs.org/
 
       - name: Install dependencies
         run: yarn
         
+      - name: Launch testing
+        run: yarn test
+
       - name: Generate new version
         if: github.event_name == 'push'
         run: npm version patch
