--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tenllado-lib",
   "private": false,
-  "version": "0.1.3",
+  "version": "0.1.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -50,7 +50,8 @@
       "require": "./dist/tenllado-lib.umd.js",
       "types": "./dist/tenllado-lib.d.ts",
       "default": "./dist/tenllado-lib.es.js"
-    }
+    },
+    "./dist/style.css": "./dist/style.css"
   },
   "files": [
     "dist",
